--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 </head>
 
 <body>
+
+
+<div id="preloader">
+  <div id="status">&nbsp;</div>
+</div>
+
+
+
     <div id="fullpage">
         <div class="section" data-anchor="homePage">
             <div class="container-fluid">
@@ -49,15 +57,8 @@
             <div class="container-fluid">
                 <div class="menuWrapper">
                     <div class="galleryBtn box">
-<<<<<<< HEAD
-                        <div class="galleryTitle"> <img class="galleryImg" src="img/galleryButton.png" /></div>
-=======
-                      
+
                         <div class="galleryTitle">  <img class="galleryImg" src="img/galleryButton.PNG" /></div>
-<<<<<<< HEAD
->>>>>>> 678740774e370e029b55033172042df4763e2638
-=======
->>>>>>> 4b30fe2919cb059e810f26902fd469e5d541914a
                     </div>
                     <div class="sketchBtn box">
                         <div class="sketchTitle"><img class="sketchImg" src="img/sketchButton.PNG" /></div>
