--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="fullpage">
         <div class="section" data-anchor="homePage">
             <div class="container-fluid">
-                <div class="diy-slideshow">
+                <div id="homePageSlide" class="diy-slideshow">
                     <figure class="show">
                         <img id="pic1" class="homeSlide" src="img/desktop/1.jpg" width="100%" />
                     </figure>
@@ -41,11 +41,18 @@
                         <img id="pic6" class="homeSlide" src="img/desktop/6.jpg" width="100%" />
                     </figure>
                 </div>
+
             </div>
+
             <div class="DJ_Name"><span>Danielle Jacobson</span>
                 <div class="toGallery galleryBtn homeToGallery">View Collection</div>
                 <br>Off The Right Track
             </div>
+             <div id="mobileDJ_Name" class="DJ_Name"><span>Danielle Jacobson</span>
+                <div id="mobileGalleryBtn" class="toGallery galleryBtn homeToGallery">View Collection</div>
+                <br>Off The Right Track
+            </div>
+
         </div>
         <div class="section" data-anchor="bio">
             <div class="container-fluid">
