--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="status">&nbsp;</div>
     </div>
     <div id="fullpage">
-        <div class="section" data-anchor="homePage">
+        <div class="section fp-auto-height" data-anchor="homePage">
             <div class="container-fluid">
                 <div id="homePageSlide" class="diy-slideshow">
                     <figure class="show">
@@ -54,7 +54,7 @@
             </div>
 
         </div>
-        <div class="section" data-anchor="bio">
+        <div class="section fp-auto-height" data-anchor="bio">
             <div class="container-fluid">
                 <div class="menuWrapper">
                     <div class="galleryBtn box">
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </div>
-        <div class="section" data-anchor="sketchPage1">
+        <div class="section fp-auto-height" data-anchor="sketchPage1">
             <div class="gridWrapper">
                 <div class="grid">
                     <!-- width of .grid-sizer used for columnWidth -->
@@ -227,7 +227,7 @@
                 </div>
             </div>
         </div>
-        <div class="section" data-anchor="aboutMe">
+        <div class="section fp-auto-height" data-anchor="aboutMe">
             <div class="container-fluid">
                 <div class="diy-slideshow aboutMe">
                     <div class="aboutMeWrapper">
