--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="preloader">
         <div id="status">&nbsp;</div>
     </div>
-    <div id="fullpage">
+    <div id="fullpage fp-responsive">
         <div class="section fp-auto-height" data-anchor="homePage">
             <div class="container-fluid">
                 <div id="homePageSlide" class="diy-slideshow">
