--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <title></title>
 </head>
 
-<body>
+<body class = "fp-responsive">
     <div id="preloader">
         <div id="status">&nbsp;</div>
     </div>
-    <div id="fullpage fp-responsive">
+    <div id="fullpage">
         <div class="section fp-auto-height" data-anchor="homePage">
             <div class="container-fluid">
                 <div id="homePageSlide" class="diy-slideshow">
