--- a/mobile.html
+++ b/mobile.html
@@ -225,14 +225,11 @@
                 </div>
             </div>
         </div>
-        <div class="section fp-auto-height" data-anchor="aboutMe">
+        <div class="section" data-anchor="aboutMe">
             <div class="container-fluid">
                 <div class="diy-slideshow aboutMe">
                     <div class="aboutMeWrapper">
-                        <div class="left">
-                            <div class="zanzoImg"><img src="img/sketchbook/17.jpg">
-                            </div>
-                        </div>
+
                         <div class="right">
                             <div class="aboutMeRightWrapper">
                                 <h1>Danielle Jacobson</h1>
@@ -249,6 +246,10 @@
                                     </a>
                                 </div>
                                 <div class="toAboutMe" id="backToTop">back to top</div>
+                                                        <div class="left">
+                            <div class="zanzoImg"><img src="img/sketchbook/17.jpg">
+                            </div>
+                        </div>
                             </div>
                                </div>
                                   </div>
