--- a/mobile.html
+++ b/mobile.html
@@ -67,11 +67,13 @@
                 <div class="diy-slideshow bio">
                     <div class="bioTextWrapper">
                         <div class="bioTitle">Off The Right Track</div>
-                        <div class="bioDescription">My journey to London last summer set me on a path of self-discovery. During my internship I let my self-control kick in and in the end realized that my fear of going off track left me with little to no space to enjoy the "now". Towards the end of that journey I decided to venture off to Brighton and came across an amusement park on the pier with a big yellow Rollercoaster. That day, sitting at the edge of my seat on the rollercoaster high above the water had a profound effect on me. I was forced let go. The reason I love rollercoasters so much is because it allows you to feel completely out of control in the most controlled environment possible. This underlined tension between the different stages on a roller-coasters' journey, comes across in the silhouettes; prints and embroidery in this summery street-wear collection. Denim is a key fabric alongside one-of-a-kind, hand-printed prints and chunky hand-knitted knits. A bold pastel color scheme is combined with touches of black and dark blue and a mix of textures and movement is created with kirigami cut-outs and games of transparency.</div>
+                        <div class="bioDescription">My journey to London last summer set me on a path of self-discovery. During my internship I let my self-control kick in and in the end realized that my fear of going off track left me with little to no space to enjoy the "now". Towards the end of that journey I decided to venture off to Brighton and came across an amusement park on the pier with a big yellow Rollercoaster. That day, sitting at the edge of my seat on the rollercoaster high above the water had a profound effect on me. I was forced let go. The reason I love rollercoasters so much is because it allows you to feel completely out of control in the most controlled environment possible. This underlined tension between the different stages on a roller-coasters' journey, comes across in the silhouettes; prints and embroidery in this summery...</div>
                     </div>
                 </div>
             </div>
+            <div id="secondGalleryBtn" class="toGallery galleryBtn homeToGallery">View Collection</div>
         </div>
+
         <div class="section fp-auto-height sketchPageMobile" data-anchor="sketchPage1">
             <div class="gridWrapper">
                 <div class="grid">
@@ -245,13 +247,14 @@
                                             <img src="img/insta-icon.png"></div>
                                     </a>
                                 </div>
-                                <div class="toAboutMe" id="backToTop">back to top</div>
+                               
                                                         <div class="left">
                             <div class="zanzoImg"><img src="img/sketchbook/17.jpg">
                             </div>
                         </div>
                             </div>
                                </div>
+                                <div class="toAboutMe" id="backToTop">back to top</div>
                                   </div>
                                      </div>
                                         </div>
