--- a/index.html
+++ b/index.html
@@ -6,14 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
 
-    <script type="text/javascript">
-<!--
-if (screen.width <= 699) {
-document.location = "mobile.html";
-}
-//-->
-</script>
-
 <head>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Jura:400,600" rel="stylesheet">
@@ -42,22 +34,22 @@ document.location = "mobile.html";
             <div class="container-fluid">
                 <div id="homePageSlide" class="diy-slideshow">
                     <figure class="show">
-                        <img id="pic1" class="homeSlide" src="img/desktop/1.jpg" width="100%" />
+                        <img id="pic1" class="homeSlide" src="img/desktop/1.jpg" width="100%" height="1050px" />
                     </figure>
                     <figure>
-                        <img id="pic2" class="homeSlide" src="img/desktop/2.jpg" width="100%" />
+                        <img id="pic2" class="homeSlide" src="img/desktop/2.jpg" width="100%" height="1050px"/>
                     </figure>
                     <figure>
-                        <img id="pic3" class="homeSlide" src="img/desktop/3.jpg" width="100%" />
+                        <img id="pic3" class="homeSlide" src="img/desktop/3.jpg" width="100%" height="1050px"/>
                     </figure>
                     <figure>
-                        <img id="pic4" class="homeSlide" src="img/desktop/4.jpg" width="100%" />
+                        <img id="pic4" class="homeSlide" src="img/desktop/4.jpg" width="100%" height="1050px"/>
                     </figure>
                     <figure>
-                        <img id="pic5" class="homeSlide" src="img/desktop/5.jpg" width="100%" />
+                        <img id="pic5" class="homeSlide" src="img/desktop/5.jpg" width="100%" height="1050px"/>
                     </figure>
                     <figure>
-                        <img id="pic6" class="homeSlide" src="img/desktop/6.jpg" width="100%" />
+                        <img id="pic6" class="homeSlide" src="img/desktop/6.jpg" width="100%" height="1060px"/>
                     </figure>
                 </div>
 
